--- a/template/info.plist
+++ b/template/info.plist
@@ -2,13 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIdentifier</key><string>Zig Stdlib</string>
-	<key>CFBundleName</key><string>Zig Standard Library</string>
+	<key>CFBundleIdentifier</key><string>Zig2</string>
+	<key>CFBundleName</key><string>Zig Guide</string>
 	<key>DocSetPlatformFamily</key><string>Zig</string>
 
 	<key>isDashDocset</key><true/>
 	<key>DashDocSetDefaultFTSEnabled</key><true/> <!-- enable Full-text Search -->
 	<key>DashDocSetFamily</key><string>dashtoc</string> <!-- enable TOC -->
-	<key>dashIndexFilePath</key><string>std.html</string> <!-- set main page -->
+	<key>dashIndexFilePath</key><string>Zig Language Reference.html</string> <!-- set main page -->
 </dict>
 </plist>
