--- a/template/Contents/info.plist
+++ b/template/Contents/info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIdentifier</key><string>Zig2</string>
-	<key>CFBundleName</key><string>Zig Guide</string>
+	<key>CFBundleIdentifier</key><string>Zig</string>
+	<key>CFBundleName</key><string>Zig</string>
 	<key>DocSetPlatformFamily</key><string>Zig</string>
 
 	<key>isDashDocset</key><true/>
