--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zig2dash",
-  "module": "gen.cjs",
+  "module": "gen.js",
   "type": "module",
   "license": "MIT",
   "dependencies": {
@@ -8,8 +8,7 @@
     "html-minifier": "^4.0.0",
     "inquirer": "^9.1.2",
     "jsdom": "^20.0.0",
-    "sequelize": "^6.23.1",
-    "sqlite3": "^5.1.1",
-    "winston": "^3.8.2"
+    "sequelize": "^6.25.0",
+    "sqlite3": "^5.1.2"
   }
 }
