--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "zig2dash",
-  "module": "gen.js",
+  "module": "index.js",
   "type": "module",
   "license": "MIT",
-  "scripts": {
-    "gen": "node index.js"
-  },
   "dependencies": {
     "fs-extra": "^10.1.0",
     "html-minifier": "^4.0.0",
